...
                    CircularProgressBar(
                        progress = completedTaskPercentage,
                        modifier = Modifier.padding(end = 16.dp)
                    )
                    IconButton(
                        onClick = { showFilterMenu = true },
                        modifier = Modifier.semantics { contentDescription = "Filter Tasks" }
                    ) {
                        Icon(
                            painter = painterResource(R.drawable.baseline_filter_list_alt_24),
                            contentDescription = "Filter Tasks"
                        )
                    }
                    DropdownMenu(
                        expanded = showFilterMenu,
                        onDismissRequest = { showFilterMenu = false }
                    ) {
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Filter All" },
                            text = { Text("All") },
                            onClick = {
                                viewModel.updateFilterOption(FilterOption.ALL)
                                showFilterMenu = false
                            }
                        )
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Filter Completed" },
                            text = { Text("Completed") },
                            onClick = {
                                viewModel.updateFilterOption(FilterOption.COMPLETED)
                                showFilterMenu = false
                            }
                        )
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Filter Pending" },
                            text = { Text("Pending") },
                            onClick = {
                                viewModel.updateFilterOption(FilterOption.PENDING)
                                showFilterMenu = false
                            }
                        )
                    }
                    IconButton(onClick = { showSortMenu = true },
                        modifier = Modifier.semantics { contentDescription = "Sort Tasks" }) {
                        Icon(
                            painter = painterResource(R.drawable.baseline_sort_24),
                            contentDescription = "Sort Tasks"
                        )
                    }
                    DropdownMenu(
                        expanded = showSortMenu,
                        onDismissRequest = { showSortMenu = false }
                    ) {
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Sort By Priority" },
                            text = { Text("By Priority") },
                            onClick = {
                                viewModel.updateSortOption(SortOption.PRIORITY)
                                showSortMenu = false
                            }
                        )
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Sort By Due Date" },
                            text = { Text("By Due Date") },
                            onClick = {
                                viewModel.updateSortOption(SortOption.DUE_DATE)
                                showSortMenu = false
                            }
                        )
                        DropdownMenuItem(
                            modifier = Modifier.semantics { contentDescription = "Sort By Title" },
                            text = { Text("By Title") },
                            onClick = {
                                viewModel.updateSortOption(SortOption.ALPHABETICAL)
                                showSortMenu = false
                            }
                        )
...
